Resolve visible-xs line break issue

--- a/src/ResumeWorkspace/Content/Site.css
+++ b/src/ResumeWorkspace/Content/Site.css
@@ -1,6 +1,11 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1000px;
 }
 
 /* Set padding to keep content from hitting the edges */
@@ -21,4 +26,10 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.v-align {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
 }
